--- a/src/i18n/locales/ja.json
+++ b/src/i18n/locales/ja.json
@@ -70,7 +70,7 @@
       "title": "使い方",
       "item1": "紫色のエリアに画像をドロップすると、AIがコールサインを自動認識してカードを作成",
       "item2": "または「手動で追加」をクリックしてカードを1つずつ作成",
-      "item3": "各QSLカードは表面（必須）と裏面（任意）を含みます",
+      "item3": "各QSLカードは表面・裏面とも任意で、少なくとも片面をアップロードしてください",
       "item4": "システムが自動的にファイル名を生成します：",
       "frontName": "表面: コールサイン.jpg / コールサイン_6m.jpg / コールサイン_SAT.jpg",
       "backName": "裏面: コールサイン_B.jpg / コールサイン_6m_B.jpg / コールサイン_SAT_B.jpg",
