--- a/src/i18n/locales/zh-CN.json
+++ b/src/i18n/locales/zh-CN.json
@@ -70,7 +70,7 @@
       "title": "使用说明",
       "item1": "拖放图片到紫色区域，AI 自动识别呼号并创建卡片",
       "item2": "也可以点击「手动添加」逐个创建卡片",
-      "item3": "每张 QSL 卡片包含正面（必填）和背面（可选）",
+      "item3": "每张 QSL 卡片正面和背面都可选，至少上传一面",
       "item4": "系统会自动生成文件名",
       "frontName": "正面: 呼号.jpg / 呼号_6m.jpg / 呼号_SAT.jpg",
       "backName": "背面: 呼号_B.jpg / 呼号_6m_B.jpg / 呼号_SAT_B.jpg",
