--- a/src/i18n/locales/zh-TW.json
+++ b/src/i18n/locales/zh-TW.json
@@ -70,7 +70,7 @@
       "title": "使用說明",
       "item1": "拖放圖片到紫色區域，AI 自動識別呼號並創建卡片",
       "item2": "也可以點擊「手動添加」逐個創建卡片",
-      "item3": "每張 QSL 卡片包含正面（必填）和背面（可選）",
+      "item3": "每張 QSL 卡片正面和背面都可選，至少上傳一面",
       "item4": "系統會自動生成文件名",
       "frontName": "正面: 呼號.jpg / 呼號_6m.jpg / 呼號_SAT.jpg",
       "backName": "背面: 呼號_B.jpg / 呼號_6m_B.jpg / 呼號_SAT_B.jpg",
